# projecty

./: 17.cpp  One more sort  Selection sort with eliminate dublicates  alg selection sort  quicksort  recursivefunc.cpp  required number of replacements
CreatePass/: CMakeLists.txt  main.cpp
